second commit for hi avec css

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
+<html>
 	<head>
-	<title>  </title>
-	<meta charset="utf-8">
+		<title>  </title>
+		<meta charset="utf-8">
+		<link rel="stylesheet" type="text/css" href="styles.css">
 	</head>
-	<h1>  Hi </h1>
+	
 	<body>
-
+	<h1>
+	Hello every body in our class
+	</h1>
+	</body>
+	
 	</html>
